Modifications to some dotfiles...

--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -46,14 +46,16 @@ click-left = "xdotool key --clearmodifiers Super_L+9"
 
 
 [module/user-label]
-type = custom/text
+type = custom/script
+exec = echo "@$USER"
+interval = 3600  ; Update every hour (adjust as needed)
 format = <label>
 ; format-foreground = ${color.cyan}
-label = "@Almighty42"
+label = %output%
 
 [module/bluetooth]
 type = custom/script
-exec = /home/Almighty42/.config/polybar/forest/scripts/bluetooth.sh
+exec = ~/.config/polybar/forest/scripts/bluetooth.sh
 interval = 2
 # click-left = exec blueberry
 # click-right = exec path/to/scripts/config/polybar/toggle_bluetooth.sh
@@ -172,7 +174,7 @@ ramp-foreground = ${color.lime}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/battery-combined]
 type = custom/script
-exec = /home/Almighty42/.config/polybar/forest/scripts/battery-combined-udev.sh
+exec = ~/.config/polybar/forest/scripts/battery-combined-udev.sh
 tail = true
 ; interval = 1
 
