Added some extra stuff, and removed borders / shadows from picom.conf

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -19,8 +19,8 @@ unredir-if-possible = true;
 #resize-damage = 7;
 vsync = true;
 
-corner-radius = 8.0;
-round-borders = 1;
+corner-radius = 0;
+round-borders = 0;
 rounded-corners-exclude = [
   "class_g = 'dunst'",
   "class_g = 'Polybar'",
@@ -37,7 +37,7 @@ rounded-borders-exclude = [
 ]
 
  #Shadow
-shadow = true;			# Enabled client-side shadows on windows.
+shadow = false;			# Enabled client-side shadows on windows.
 shadow-radius = 40;		# The blur radius for shadows. (default 12)
 shadow-offset-x = -40;		# The left offset for shadows. (default -15)
 shadow-offset-y = -20;		# The top offset for shadows. (default -15)
