--- a/.config/aconfmgr/files/etc/lightdm/lightdm.conf
+++ b/.config/aconfmgr/files/etc/lightdm/lightdm.conf
@@ -61,7 +61,7 @@ run-directory=/run/lightdm
 # xdmcp-port = XDMCP UDP/IP port to communicate on
 # xdmcp-key = Authentication key to use for XDM-AUTHENTICATION-1 (stored in keys.conf)
 greeter-session = lightdm-webkit2-greeter
-session-setup-script=/home/Almighty42/.config/polybar/forest/launch.sh
+#session-setup-script=$HOME/.config/polybar/forest/launch.sh
 # greeter-hide-users = True to hide the user list
 # greeter-allow-guest = True if the greeter should show a guest login option
 # greeter-show-manual-login = True if the greeter should offer a manual login option
