Removed some stuff from aconfmgr 3#

--- a/.config/aconfmgr/files/etc/lightdm/lightdm.conf
+++ b/.config/aconfmgr/files/etc/lightdm/lightdm.conf
@@ -28,7 +28,7 @@
 #guest-account-script=guest-account
 #logind-check-graphical=true
 #log-directory=/var/log/lightdm
-run-directory=/run/lightdm
+#run-directory=/run/lightdm
 #cache-directory=/var/cache/lightdm
 #sessions-directory=/usr/share/lightdm/sessions:/usr/share/xsessions:/usr/share/wayland-sessions
 #remote-sessions-directory=/usr/share/lightdm/remote-sessions
@@ -110,7 +110,7 @@ greeter-session = lightdm-webkit2-greeter
 #allow-user-switching=true
 #allow-guest=true
 #guest-session=
-session-wrapper=/etc/lightdm/Xsession
+#session-wrapper=/etc/lightdm/Xsession
 #greeter-wrapper=
 #guest-wrapper=
 #display-setup-script=
