--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,13 +2,15 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin "janoamaral/tokyo-night-tmux"
+#set -g @plugin 'egel/tmux-gruvbox'
 
 # Tokyo night config
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_date_format MYD
 set -g @tokyo-night-tmux_time_format 12H
+# set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
 
 # Setting tmux so the first window starts on 1
 set -g base-index 1
