--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,37 +11,35 @@
 
 
 backend = "glx";
-glx-no-stencil = true;
-glx-no-rebind-pixmap = true;
+# glx-no-stencil = true;
+# glx-no-rebind-pixmap = true;
 xrender-sync-fence = true;
 #force-win-blend = false;
 unredir-if-possible = true;
 #resize-damage = 7;
 vsync = true;
 
-corner-radius = 0;
+corner-radius = 10;
 round-borders = 0;
 rounded-corners-exclude = [
   "class_g = 'dunst'",
   "class_g = 'Polybar'",
   "class_g = 'Rofi'", 
-  "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ];
 rounded-borders-exclude = [
   "class_g = 'dunst'",
   "class_g = 'Polybar'",
   "class_g = 'Rofi'",
-  "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ]
 
  #Shadow
-shadow = false;			# Enabled client-side shadows on windows.
-shadow-radius = 40;		# The blur radius for shadows. (default 12)
-shadow-offset-x = -40;		# The left offset for shadows. (default -15)
-shadow-offset-y = -20;		# The top offset for shadows. (default -15)
-shadow-opacity = 0.35;
+shadow = true;			# Enabled client-side shadows on windows.
+shadow-radius = 12;		# The blur radius for shadows. (default 12)
+shadow-offset-x = -5;            # Negative values pull shadow left
+shadow-offset-y = -5;            # Negative values pull shadow up
+shadow-opacity = 0.3;
 shadow-exclude = [
  "class_g = 'Plank'",
  "! name~=''",
@@ -70,8 +68,10 @@ fade-out-step = 0.03; # Opacity change between steps while fading out. (default 
 #no-fading-openclose = true; # Fade windows in/out when opening/closing
 
 ## Opacity
-#inactive-opacity = 0.90;
-#active-opacity = 1;
+# Transparency (adjust as needed)
+inactive-opacity = 0.9;
+active-opacity = 0.95;
+frame-opacity = 0.9;
 #frame-opacity = 1;
 #inactive-opacity-override = false;
 #inactive-dim = 0.2;
@@ -81,25 +81,28 @@ fade-out-step = 0.03; # Opacity change between steps while fading out. (default 
 
 detect-client-opacity = true; # This prevents opacity being ignored for some apps. For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
 
-opacity-rule = [
-  #"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-  #"40:class_g = 'Bspwm' && 
-  "40:class_i = 'presel_feedback'",
-];
+# opacity-rule = [
+#   "90:class_g = 'St'",
+#   "80:class_g = 'St' && !focused",
+# ];
 
 # Blur
-blur-method = "dual_kawase";
-blur-strength = 10;
-blur-background = true;
-#blur-background-frame = true;
-blur-background-fixed = true;
+blur: {
+  method = "dual_kawase";  # Smoother than "kawase"
+  strength = 8;            # Adjust blur intensity (5-20)
+  background = true;       # Blur behind transparent windows
+  background-frame = false; # Don't blur window decorations
+  background-fixed = true; # Saves performance if windows don't move
+  kern = "3x3box";        # Optional: Fallback kernel for "kawase" method
+}
+
+# Exclude certain windows from blur
 blur-background-exclude = [
-  #"class_g = 'Plank'", 
-  "class_g = 'slop'", 
-  #"class_g != 'i3lock'",
-  #"name != 'rofi - ' && 
-  "class_i != 'presel_feedback'",
-]
+  "class_g = 'slop'",     # Exclude screenshot tool
+  "class_i = 'presel_feedback'", # Exclude i3/sway resize hints
+  "window_type = 'dock'",  # Exclude panels/taskbars
+  "window_type = 'desktop'", # Exclude desktop icons
+];
 
 # Animation settings
 transition-length = 300;
