--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,6 +23,9 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+# Keybind for killing a session
+bind-key k kill-session
+
 # Keybind for pane stuff
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
