Updated tmuxp and neovim init.lua

--- a/.config/tmuxp/Open-Source-Pirate.yaml
+++ b/.config/tmuxp/Open-Source-Pirate.yaml
@@ -1,11 +1,11 @@
 session_name: Open-Source-Pirate
-start_directory: $HOME/Development/Code/Projects-Code/Open Source Pirate
+start_directory: $HOME/Development/Code/Projects-Code/Open-Source-Pirate
 windows:
   - window_name: Development
     panes:
       - shell_command:
         - sourc && v
-    start_directory: $HOME/Development/Code/Projects-Code/Open Source Pirate
+    start_directory: $HOME/Development/Code/Projects-Code/Open-Source-Pirate
   - window_name: Server
     layout: main-vertical
     panes:
@@ -13,9 +13,9 @@ windows:
         - wuzz
       - shell_command:
         - clear && sourc && python run.py
-    start_directory: $HOME/Development/Code/Projects-Code/Open Source Pirate
+    start_directory: $HOME/Development/Code/Projects-Code/Open-Source-Pirate
   - window_name: Git
     panes:
       - shell_command:
         - lgit
-    start_directory: $HOME/Development/Code/Projects-Code/Open Source Pirate
+    start_directory: $HOME/Development/Code/Projects-Code/Open-Source-Pirate
